--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "dev-express": "node server.js",
+    "start-express": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "homepage": "https://github.com/poomer123/nextjs-basic#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "next": "^8.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
