--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "next": "^8.0.4",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
